--- a/CShapImprove.csproj
+++ b/CShapImprove.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Book.cs" />
     <Compile Include="Library.cs" />
     <Compile Include="Member.cs" />
+    <Compile Include="newCode.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toturial.cs" />
