--- a/CShapImprove.csproj
+++ b/CShapImprove.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="AccountLimitInit.cs" />
+    <Compile Include="BusinessAccount.cs" />
+    <Compile Include="CheckingAccount.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavingsAccount.cs" />
