--- a/CShapImprove.csproj
+++ b/CShapImprove.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AccountLimitInit.cs" />
     <Compile Include="BusinessAccount.cs" />
     <Compile Include="CheckingAccount.cs" />
+    <Compile Include="HistoryAccount.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavingsAccount.cs" />
